--- a/FlaskWebProject/FlaskWebProject/templates/index.jade
+++ b/FlaskWebProject/FlaskWebProject/templates/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .jumbotron
-    h1 Flask/Jade - Justin Freres
+    h1 Justin Freres
     p.lead Flask is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.
     p
       a.btn.btn-primary.btn-large(href='http://flask.pocoo.org/') Learn more &raquo;
