--- a/FlaskWebProject/FlaskWebProject/templates/index.jade
+++ b/FlaskWebProject/FlaskWebProject/templates/index.jade
@@ -8,7 +8,7 @@ block content
       a.btn.btn-primary.btn-large(href='http://flask.pocoo.org/') Learn more &raquo;
   .row
     .col-md-4
-      h2 Hello
+      h2 Hello World
       p Flask gives you a powerful, patterns-based way to build dynamic websites that enables a clean separation of concerns and gives you full control over markup for enjoyable, agile development.
       p
         a.btn.btn-default(href='http://flask.pocoo.org/docs/') Learn more &raquo;
